update job post
